--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
                 <div id="menue">
                   <nav class="navbar bg-body-tertiary fixed-top">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="index.html"><h4>Clash Royale - Data Science Project</h4></a>
+                      <a class="navbar-brand flex-container" href="index.html">
+                        <img src="img/logo.png" class="flex-child" style="width: 195px; height: 80px;">
+                        <h4 class="flex-child" style="margin-top: 20px;">Data Science Project</h4>
+                      </a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -75,6 +78,7 @@
                                 <a class="nav-link">Marten K.</a>
                                 <a class="nav-link">Philipp W.</a>
                                 <a class="nav-link">Content was created as part of the Data Science project at Kiel University.</a>
+                                <a class="nav-link" style="font-size: small;">Clash Royale Logo taken from flyclipart.com</a>
                             </li>
                           </ul>
                         </div>
